# ghostodds

./: .gitignore  Anchor.toml  package.json
app/: next.config.ts  package-lock.json  package.json
app/public/: buffer-polyfill.js
app/src/app/: globals.css  layout.tsx  page.tsx  polyfills.ts
app/src/app/admin/: page.tsx
app/src/app/demo/: page.tsx
app/src/app/market/[id]/: page.tsx
app/src/app/pitch/: layout.tsx  page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: ActivityTicker.tsx  ClientProviders.tsx  FeaturedMarket.tsx  Footer.tsx  GhostPattern.tsx  HowItWorks.tsx  MarketCard.tsx  Navbar.tsx  PriceChart.tsx  StatsBanner.tsx  Toast.tsx  TradingPanel.tsx  WalletButton.tsx  WalletProvider.tsx
app/src/lib/: anchor.ts  demo-markets.ts  format.ts  idl.ts  mock-activity.ts  mock-data.ts  positions-context.tsx  positions-store.ts  price-feed.ts  types.ts  usdc-context.tsx  useMarkets.ts  usePositions.ts
app/src/types/: jsx.d.ts
docs/: AUDIT_REPORT.md  DECISIONS.md  DESIGN_SYSTEM.md  PITCH_DECK.md  SPRINT.md
journals/: frontend-dev-v2.md  frontend-dev.md  ghost-pattern-log.md  integration-log.md  market-detail-log.md  pm.md  price-overlay-log.md  qa-auditor.md  rust-dev.md
pitch-deck/: index.html
programs/ghostodds/: Cargo.toml  program-id.txt
programs/ghostodds/src/: lib.rs
scripts/: deploy.sh  setup-devnet.ts
specs/: FRONTEND_SPEC.md  QA_AUDITOR_SPEC.md  RUST_DEV_SPEC.md
tests/: ghostodds.ts  ghostodds_anchor.ts
