[package]
name = "ghostodds"
version = "0.1.0"
description = "GhostOdds prediction market protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghostodds"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
