[package]
name = "ghostodds"
version = "0.1.0"
description = "GhostOdds prediction market protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghostodds"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
pyth-sdk-solana = "0.10.6"
blake3 = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
